<resources>
    <string name="app_name">MadLevel1Task1</string>
    <string name="main_text">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="lower_button">Lower</string>
    <string name="equals_button">Equals</string>
    <string name="higher_button">Higher</string>
    <string name="dice">dice that gets rolled</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>