<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dice"
        app:layout_constraintBottom_toTopOf="@id/equalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainText" />

    <TextView
        android:id="@+id/lastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice" />

    <Button
        android:id="@+id/lowerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lower_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equalButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equals_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/higherButton"
        app:layout_constraintStart_toEndOf="@id/lowerButton" />

    <Button
        android:id="@+id/higherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/higher_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/equalButton" />

</androidx.constraintlayout.widget.ConstraintLayout>